[package]
name = "blstrs"
description = "High performance implementation of BLS12 381"
version = "0.4.2"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/blstrs"
documentation = "https://docs.rs/blstrs"
categories = ["cryptography", "algorithms"]
readme = "README.md"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dependencies]
blst = { version = "=0.3.10", default-features = true }
rand_core = "0.6"
ff = "0.11"
group = { version = "0.11", features = ["tests"] }
pairing_lib = { version = "0.21", package = "pairing" }
subtle = "2.2.1"

serde = { version = "1.0", features = ["derive"], optional = true }
ec-gpu = { version = "0.1.0", optional = true }
byte-slice-cast = "1.0.0"
digest = { version = "0.9", optional = true }



[dev-dependencies]
rand_xorshift = "0.3.0"
serde_json = "1.0.57"
hex = "0.4.2"
sha2 = "0.9"
sha3 = "0.9"

[features]
default = ["serde", "hash_to_curve", "alloc"]
hash_to_curve = ["digest"]
alloc = []
portable = ["blst/portable"]
gpu = ["ec-gpu"]
__private_bench = []
